z-index fixed

--- a/css/main.css
+++ b/css/main.css
@@ -254,6 +254,7 @@ footer {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    z-index: 0;
     position: relative;
     height: auto;
     padding-bottom: 0px;
@@ -311,6 +312,7 @@ footer {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    z-index: 0;
     position: relative;
     height: auto;
     padding-bottom: 0px;
