--- a/sass/components/_nav-menu.scss
+++ b/sass/components/_nav-menu.scss
@@ -126,11 +126,12 @@
     flex-direction: row;
     max-width: 1200px;
     height: 80px;
+  
   }
 
   .menu__container {
     display: flex;
-
+    z-index: 0;
     position: relative;
     height: auto;
     padding-bottom: 0px;
@@ -180,7 +181,7 @@
 
   .menu__container {
     display: flex;
-
+    z-index: 0;
     position: relative;
     height: auto;
     padding-bottom: 0px;
